--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-
+<h1 class="topbar"> Each time you scale up your game you´ll be contributiing $1 to the WWF <img class="wwf" src="images/wwf.jpg" alt=""></h1>
   <!-- Navbar -->
   <section id="title">
     <div class="container-fluid">
@@ -49,9 +49,7 @@
             <li class="nav-item">
               <a class="nav-link" href="#sponsors">sponsors</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#giveaways">giveaways</a>
-            </li>
+
             <li class="nav-item">
               <a class="nav-link" href="#people">people</a>
             </li>
@@ -81,7 +79,12 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#entrar">login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#giveaways">giveaways</a>
+            </li>
           </ul>
+
         </div>
 
 
@@ -103,14 +106,14 @@
     </div>
 
   </section>
-    <button class="btn btn-lg btn-danger btn-block"><b>Start the Game</b></button>
-<!-- entrar -->
+  <button class="btn btn-lg btn-danger btn-block"><b>Start the Game</b></button>
+  <!-- entrar -->
   <section id="entrar" class="text-center">
     <img class="login-acc" src="images/login.png" alt="">
     <br>
-  <a href="#title" class="btn btn-primary text-right"><i class="fas fa-level-up-alt"></i></a>
+    <a href="#title" class="btn btn-primary text-right"><i class="fas fa-level-up-alt"></i></a>
   </section>
-    <!--sponsors -->
+  <!--sponsors -->
   <section id="sponsors">
     <h2 class="lojas-title">Our Sponsors</h2>
     <p class="lojas-par">Please choose one who will be backing you</p>
@@ -169,9 +172,9 @@
     </div>
     <button class="btn btn-lg btn-dark btn-block">Find more</button>
     <br>
-  <a href="#title" class="btn btn-primary text-right"><i class="fas fa-level-up-alt"></i></a>
+    <a href="#title" class="btn btn-primary text-right"><i class="fas fa-level-up-alt"></i></a>
   </section>
-    <!-- Rules -->
+  <!-- Rules -->
   <section id="regras">
     <div class="top-section">
       <h1 class="section-title">
@@ -260,7 +263,7 @@
 
     </div>
     <br>
-  <a href="#title" class="btn btn-primary text-right"><i class="fas fa-level-up-alt"></i></a>
+    <a href="#title" class="btn btn-primary text-right"><i class="fas fa-level-up-alt"></i></a>
   </section>
   <!-- people -->
   <section id="people">
@@ -356,7 +359,7 @@
       </a>
     </div>
     <br>
-  <a href="#title" class="btn btn-primary text-right"><i class="fas fa-level-up-alt"></i></a>
+    <a href="#title" class="btn btn-primary text-right"><i class="fas fa-level-up-alt"></i></a>
   </section>
   <!-- social media -->
 
@@ -385,7 +388,7 @@
     <br>
     <p>© Copyright 2020 United for Good</p>
 
-  <a href="#title" class="btn btn-primary text-right"><i class="fas fa-level-up-alt"></i></a>
+    <a href="#title" class="btn btn-primary text-right"><i class="fas fa-level-up-alt"></i></a>
   </footer>
 
 
