--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
         Rule Book
       </h1>
       <h2>Don´t be naughty. Just follow the rules! 😃 </h2>
-      <p><b>Youfegee</b> is a Country in need of help</p>
-      <p>It´s President is up for relection and doesn´t believe in Global Warmin</p>
+      <p><b>Youfgee</b> is a Country in need of help</p>
+      <p>It´s President is up for reelection and doesn´t believe in Global Warming</p>
       <p>With a population of over 400 million this represents a real threat</p>
       <p>We will provide you with 50 zillion bitnotes. You'll be financially backed by the company you chose</p>
       <h4 class="section-subtitle">Basic Rules</h4>
@@ -198,7 +198,17 @@
       <div class="col-sm-6 col-md-4 col-lg-3">
         <i class=" vantagens-icon far fas fa-gamepad fa-4x"></i>
         <h3>Join Game Anytime</h3>
-        <p>To start a new game, invite min of 2 and max of 6, online</p>
+        <p>There are always new players available to start a new game. Remember, you'll be playing globally</p>
+      </div>
+      <div class="col-sm-6 col-md-4 col-lg-3">
+        <i class="vantagens-icon fas fa-users fa-4x"></i>
+        <h3>Up to 6 players</h3>
+        <p>Play around the world or in your region</p>
+      </div>
+      <div class="col-sm-6 col-md-4 col-lg-3">
+        <i class="vantagens-icon far fa-id-card fa-4x"></i>
+        <h3>You get 5 inital cards</h3>
+        <p>They can be licences, assets or penalties</p>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
         <i class="vantagens-icon fas fa-dollar-sign fa-4x"></i>
@@ -210,21 +220,13 @@
         <h3>Buy Infrastructure</h3>
         <p>An assortment of Wind Turbines to biomass facilities </p>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <i class="vantagens-icon fas fa-users fa-4x"></i>
-        <h3>Up to 6 players</h3>
-        <p>Play around the world or in your region</p>
-      </div>
+
       <div class="col-sm-6 col-md-4 col-lg-3">
         <i class="vantagens-icon fas fa-piggy-bank fa-4x"></i>
         <h3>The banker</h3>
         <p><a href="https://www.itopf.org/">ITOPF</a> will manage your money. They will deal the cards</p>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <i class="vantagens-icon far fa-id-card fa-4x"></i>
-        <h3>You get 5 inital cards</h3>
-        <p>They can be licences, assets or penalties</p>
-      </div>
+
       <div class="col-sm-6 col-md-4 col-lg-3">
         <i class="vantagens-icon fas fa-hammer fa-4x"></i>
         <h3>Auction</h3>
@@ -242,8 +244,8 @@
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
         <i class="vantagens-icon fas fa-users fa-4x"></i>
-        <h3>Profit</h3>
-        <p>Your objetive is to make the highest profit </p>
+        <h3>Renewable KW's </h3>
+        <p>Your objetive is to create the most renewable energy KW's possible </p>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
         <i class="vantagens-icon fas fa-lock-open fa-4x"></i>
@@ -253,7 +255,7 @@
       <div class="col-sm-6 col-md-4 col-lg-3">
         <i class="vantagens-icon fas fa-calendar-alt fa-4x"></i>
         <h3>Fire and Accidents</h3>
-        <p>There will be places you don't to be in. Avoid them.</p>
+        <p>There will be places you don't to be in. Avoid them. You can even be nationalized by Youfgee</p>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
         <i class="vantagens-icon fas fa-level-up-alt fa-4x"></i>
