--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
         <i class="vantagens-icon far fa-id-card fa-4x"></i>
-        <h3>You get 5 inital cards</h3>
+        <h3>You get 5 initial cards</h3>
         <p>They can be licences, assets or penalties</p>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
@@ -245,7 +245,7 @@
       <div class="col-sm-6 col-md-4 col-lg-3">
         <i class="vantagens-icon fas fa-users fa-4x"></i>
         <h3>Renewable KW's </h3>
-        <p>Your objetive is to create the most renewable energy KW's possible </p>
+        <p>Your objective is to create the most renewable energy KW's possible </p>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
         <i class="vantagens-icon fas fa-lock-open fa-4x"></i>
@@ -269,7 +269,7 @@
   </section>
   <!-- people -->
   <section id="people">
-    <h2 class="players">This are the Players. </h2>
+    <h2 class="players">These are the Players. </h2>
     <p class="players">They´ve joined us and will help us spread the word!!!</p>
 
 
@@ -335,7 +335,7 @@
 
   <!-- giveaways -->
   <section id="giveaways" class="text-center">
-    <h1 id="giveaways-title">Each level you reach we´ll send to your adress one of these. Cumpliments from your Sponsor </h1>
+    <h1 id="giveaways-title">Each level you reach we´ll send to your address one of these. Complements from your Sponsor </h1>
     <div id="carouselExampleControls" class="carousel slide text-center" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
